# nim_pc

./: .gitignore  CMakeLists.txt  inno.iss  maxim.iss  nim_server.conf
app_sdk/: CMakeLists.txt  app_sdk.h.in  app_sdk.vcxproj  app_sdk_interface.cpp
app_sdk/protocol/: sdk_pro.cpp
chatroom/gui/: chatform_richedit.cpp  chatroom_form_ui.cpp
include/: nelp_api.h  nelp_define.h  nelp_type.h  nertc_audio_device_manager.h  nertc_engine.h  nertc_engine_defines.h  nertc_engine_event_handler_ex.h  nertc_engine_ex.h  nertc_error_code.h  nertc_introduction.h  nim_build_config.h  nim_chatroom.h  nim_chatroom_def.h  nim_chatroom_def_include.h  nim_define_include.h  nim_global_def.h  nim_msglog.h  nim_msglog_def.h  nim_p2p_def.h  nim_p2p_include.h  nim_p2p_sdk_file_def.h  nim_qchat.h  nim_qchat_attachment.h  nim_qchat_attachment_def.h  nim_qchat_channel.h  nim_qchat_channel_category.h  nim_qchat_channel_def.h  nim_qchat_client_def.h  nim_qchat_def_include.h  nim_qchat_message.h  nim_qchat_message_def.h  nim_qchat_public_def.h  nim_qchat_role.h  nim_qchat_role_def.h  nim_qchat_server.h  nim_qchat_server_def.h  nim_qchat_system_notification.h  nim_qchat_system_notification_def.h  nim_res_code_def.h  nim_robot.h  (+4 more)
lib/: jsoncpp.lib  libjpeg.lib  libssl.lib  nim.lib  nim_chatroom.lib  nim_qchat.lib  node-nim.lib  sqlite3.lib  tinyxml.lib  uv_a.lib  yuv.lib
nim_win_demo/: main.cpp  nim_app.cpp  nim_app.h
nim_win_demo/gui/cef/: cef_form.cpp
nim_win_demo/gui/login/: login_form.cpp  login_form.h  login_form_ui.cpp
nim_win_demo/gui/msglogmanage/: msglog_manage_form.cpp
nim_win_demo/gui/proxy/: proxy_form.cpp  proxy_form.h
nim_win_demo/module/config/: config_helper.cpp  config_helper.h
nim_win_demo/module/msglog_manager/: msglog_callback.cpp
nim_win_demo/module/thread/: db_thread.h  misc_thread.h
resource/res/: emoji.xml
resource/resources/lang/en_US/: gdstrings.ini
resource/resources/lang/zh_CN/: gdstrings.ini
resource/resources/themes/default/contact_select/: contact_select_form.xml
resource/resources/themes/default/emoji/: emoji_form.xml
resource/resources/themes/default/local_video_player/: local_video_player.xml
resource/resources/themes/default/login/: login.xml  login_en.xml
resource/resources/themes/default/main/: friend_item.xml  main_create_normal_group_list_item.xml  (+1 more)
tool_kits/cef/cef_render/: main.cpp
tool_kits/db/: db_pretreatment.h
tool_kits/duilib/Core/: Window.cpp
tool_kits/shared/: db_helper.h  log.h
tool_kits/ui_component/g2_kit/component/: avchat_component.cpp  avchat_component.h
tool_kits/ui_component/g2_kit/module/: video_manager_g2.cpp  video_manager_g2.h
tool_kits/ui_component/ui_kit/export/: nim_ui_init_manager.h  nim_ui_session_list_manager.cpp
tool_kits/uninstall/: setup.rc
wrapper/: CMakeLists.txt  Doxyfile
wrapper/nim_chatroom_cpp_wrapper/api/: nim_chatroom_cpp.h
wrapper/nim_chatroom_cpp_wrapper/helper/: nim_chatroom_helper.cpp
wrapper/nim_cpp_wrapper/api/: nim_cpp_msglog.cpp  nim_cpp_nos.cpp  nim_cpp_pass_through_proxy.h  nim_cpp_plugin_in.cpp  nim_cpp_robot.cpp  nim_cpp_rts.cpp  nim_cpp_rts.h  nim_cpp_session.cpp  nim_cpp_session.h  nim_cpp_session_online_service.cpp  nim_cpp_signaling.cpp  nim_cpp_subscribe_event.cpp  nim_cpp_talk.cpp  nim_cpp_talkex_collect.cpp  nim_cpp_tool.cpp  nim_cpp_user.cpp  nim_cpp_vchat.h
wrapper/nim_cpp_wrapper/helper/: nim_client_helper.cpp  nim_doc_trans_helper.cpp  nim_msglog_helper.cpp  nim_msglog_helper.h  nim_nos_helper.cpp  nim_robot_helper.cpp  nim_robot_helper.h  nim_sdk_loader_helper.cpp  nim_session_online_service_helper.cpp  nim_session_online_service_helper.h  nim_signaling_helper.h  nim_sysmsg_helper.cpp  nim_talk_helper.cpp  nim_talk_helper.h  nim_talkex_helper_collect.cpp  nim_talkex_helper_collect.h  nim_talkex_helper_pin_message.cpp  nim_talkex_helper_pin_message.h  nim_talkex_helper_quick_comment.cpp  nim_team_helper.cpp  nim_user_helper.cpp
wrapper/nim_qchat_cpp_wrapper/api/: nim_qchat_attachment_cpp.h  nim_qchat_channel_cpp.cpp  nim_qchat_channel_cpp.h  nim_qchat_cpp.h  nim_qchat_role_cpp.h  nim_qchat_server_cpp.h  nim_qchat_system_notification_cpp.h
wrapper/nim_qchat_cpp_wrapper/helper/: nim_qchat_attachment_cpp_def.h  nim_qchat_channel_cpp_def.h  nim_qchat_client_cpp_def.h  nim_qchat_helper.h  nim_qchat_system_notification_cpp_def.h
wrapper/nim_tools_cpp_wrapper/: nim_tools_http_cpp.h
wrapper/nim_wrapper_util/: json_value.cpp  nim_sdk_util.h  nim_string_util.cpp
wrapper_bak/: README.md
wrapper_bak/nim_chatroom_cpp_wrapper/: CMakeLists.txt
wrapper_bak/nim_chatroom_cpp_wrapper/api/: nim_chatroom_cpp.cpp
wrapper_bak/nim_chatroom_cpp_wrapper/helper/: nim_chatroom_helper.h
wrapper_bak/nim_cpp_wrapper/: CMakeLists.txt
wrapper_bak/nim_cpp_wrapper/api/: nim_cpp_client.cpp  nim_cpp_client.h  nim_cpp_friend.cpp  nim_cpp_global.cpp  nim_cpp_msglog.h  nim_cpp_session_online_service.h  nim_cpp_team.cpp  nim_cpp_vchat.cpp
wrapper_bak/nim_cpp_wrapper/helper/: nim_client_helper.h  nim_friend_helper.cpp  nim_friend_helper.h  nim_msg_helper.cpp  nim_msg_helper.h  nim_session_helper.cpp  nim_session_helper.h  nim_subscribe_event_helper.cpp  nim_super_team_helper.cpp  nim_talk_helper.cpp  nim_talk_helper.h  nim_talkex_helper_quick_comment.h  nim_tool_helper.h  nim_user_helper.h
wrapper_bak/nim_qchat_cpp_wrapper/: CMakeLists.txt
wrapper_bak/nim_qchat_cpp_wrapper/api/: nim_qchat_attachment_cpp.cpp  nim_qchat_channel_category_cpp.cpp  nim_qchat_channel_category_cpp.h  nim_qchat_cpp.cpp  nim_qchat_message_cpp.cpp  nim_qchat_message_cpp.h  nim_qchat_role_cpp.cpp  nim_qchat_server_cpp.cpp  nim_qchat_system_notification_cpp.cpp
wrapper_bak/nim_qchat_cpp_wrapper/helper/: nim_qchat_helper.cpp  nim_qchat_member_cpp_def.h  nim_qchat_message_cpp_def.h  nim_qchat_message_cpp_helper.cpp  nim_qchat_public_cpp_def.h  nim_qchat_role_cpp_def.h  nim_qchat_server_cpp_def.h
wrapper_bak/nim_tools_cpp_wrapper/: CMakeLists.txt  nim_tools_http_cpp.cpp
wrapper_bak/nim_wrapper_util/: CMakeLists.txt  json_value.cpp  nim_json_util.cpp  nim_json_util.h  nim_sdk_util.cpp
(+72 files in other folders)
