SET(TARGET_NAME nim_wrapper_util)

PROJECT(${TARGET_NAME})

IF (MSVC)
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
ENDIF ()

FILE(GLOB_RECURSE NIM_WRAPPER_UTIL *.h *.cpp *.inl)

ADD_LIBRARY(${TARGET_NAME} STATIC ${NIM_WRAPPER_UTIL})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER "cpp_wrappers")
